--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.2",
         "psr/log": "^3.0",
-        "symfony/uid": "^7.2",
+        "symfony/uid": "^6.4 || ^7.0",
         "php-llm/llm-chain": "^0.19.0"
     },
     "require-dev": {
