feat: add support for client transports

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,12 @@
     "require": {
         "php-llm/mcp-sdk": "dev-main",
         "symfony/config": "^6.4 || ^7.0",
+        "symfony/console": "^6.4 || ^7.0",
         "symfony/dependency-injection": "^6.4 || ^7.0",
-        "symfony/framework-bundle": "^6.4 || ^7.0"
+        "symfony/framework-bundle": "^6.4 || ^7.0",
+        "symfony/http-foundation": "^6.4 || ^7.0",
+        "symfony/http-kernel": "^6.4 || ^7.0",
+        "symfony/routing": "^6.4 || ^7.0"
     },
     "require-dev": {
         "php-cs-fixer/shim": "dev-master",
