ci: add permissions to modify labels (#16)
* ci: add permissions to modify labels

* ci: issues

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,6 +38,10 @@ jobs:
 
   qa:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
