ci: do not add custom labels (#17)
* ci: do not add custom labels

* ci: rector

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,10 +38,6 @@ jobs:
 
   qa:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,7 +46,7 @@ jobs:
         uses: ytanikin/pr-conventional-commits@1.4.1
         with:
           task_types: '["feat", "fix", "docs", "test", "ci", "style", "refactor", "perf", "chore", "revert"]'
-          add_label: 'true'
+          add_label: 'false'
           custom_labels: '{"feat": "feature", "fix": "bug", "docs": "documentation", "test": "test", "ci": "CI/CD", "style": "codestyle", "refactor": "refactor", "perf": "performance", "chore": "chore", "revert": "revert"}'
 
       - name: Setup PHP
