--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 /.git* export-ignore
+/examples export-ignore
 /tests export-ignore
 /.php-cs-fixer.dist.php export-ignore
 /phpstan.dist.neon export-ignore
