--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -1,5 +1,8 @@
 parameters:
     level: 6
     paths:
+        - examples/
         - src/
         - tests/
+    excludePaths:
+        - examples/cli/vendor (?)
