--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,12 @@
 {
-    "name": "php-llm/mcp-sdk",
-    "type": "library",
-    "description": "Model Context Protocol SDK for Client and Server applications in PHP",
+    "name": "symfony/ai",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Christopher Hertel",
-            "email": "mail@christopher-hertel.de"
-        },
-        {
-            "name": "Tobias Nyholm",
-            "email": "tobias.nyholm@gmail.com"
-        }
+    "keywords": [
+        "dev"
     ],
-    "require": {
-        "php": "^8.2",
-        "psr/log": "^3.0",
-        "symfony/uid": "^6.4 || ^7.0"
-    },
     "require-dev": {
-        "php-cs-fixer/shim": "^3.70",
-        "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5",
-        "symfony/console": "^6.4 || ^7.0",
-        "rector/rector": "^2.0",
-        "psr/cache": "^3.0"
-    },
-    "suggest": {
-        "symfony/console": "To use SymfonyConsoleTransport for STDIO",
-        "psr/cache": "To use CachePoolStore with SSE Transport"
-    },
-    "autoload": {
-        "psr-4": {
-            "PhpLlm\\McpSdk\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "PhpLlm\\McpSdk\\Tests\\": "tests/"
-        }
+        "php": ">=8.1",
+        "symfony/filesystem": "^6.4|^7.0",
+        "symfony/finder": "^6.4|^7.0"
     }
 }
