--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -32,16 +32,16 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php-version: [ '8.1', '8.2', '8.3', '8.4']
+                php-version: [ '8.2', '8.3', '8.4']
                 dependency-version: ['']
                 symfony-version: ['']
                 minimum-stability: ['stable']
                 include:
                     # lowest deps
-                    -   php-version: '8.1'
+                    -   php-version: '8.2'
                         dependency-version: 'lowest'
                     # LTS version of Symfony
-                    -   php-version: '8.1'
+                    -   php-version: '8.2'
                         symfony-version: '6.4.*'
         steps:
             -   name: Checkout
@@ -55,13 +55,14 @@ jobs:
                   echo COMPOSER_VALIDATE='composer validate --strict' >> $GITHUB_ENV
                   echo PHPSTAN='vendor/bin/phpstan' >> $GITHUB_ENV
 
+                  PACKAGES=$(find src/ -mindepth 2 -type f -name composer.json -not -path "*/vendor/*" -printf '%h\n' | sed 's/^src\///' | grep -Ev "examples" | sort |  tr '\n' ' ')
                   echo "Packages: $PACKAGES"
                   echo "PACKAGES=$PACKAGES" >> $GITHUB_ENV
 
             -   name: Setup PHP
                 uses: shivammathur/setup-php@v2
                 with:
-                    php-version: '8.1'
+                    php-version: '8.2'
                     tools: flex
 
             - name: Install root dependencies
