--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require-dev": {
         "php": ">=8.1",
         "symfony/filesystem": "^6.4|^7.0",
-        "symfony/finder": "^6.4|^7.0"
+        "symfony/finder": "^6.4|^7.0",
+        "php-cs-fixer/shim": "^3.75"
     }
 }
