--- a/examples/.env
+++ b/examples/.env
@@ -59,6 +59,9 @@ MONGODB_URI=
 PINECONE_API_KEY=
 PINECONE_HOST=
 
+# For using Postgres (store)
+POSTGRES_URI=pdo-pgsql://postgres:postgres@127.0.1:5432/my_database
+
 # Some examples are expensive to run, so we disable them by default
 RUN_EXPENSIVE_EXAMPLES=false
 
