docs: fix example scripts for docker, class names and env var names

--- a/examples/composer.json
+++ b/examples/composer.json
@@ -8,6 +8,7 @@
         "async-aws/bedrock-runtime": "^1.1",
         "codewithkyrian/transformers": "^0.5.3",
         "doctrine/dbal": "^3.3|^4.0",
+        "mrmysql/youtube-transcript": "^0.0.5",
         "php-http/discovery": "^1.20",
         "probots-io/pinecone-php": "^1.1",
         "psr/http-factory-implementation": "*",
@@ -38,6 +39,7 @@
         "allow-plugins": {
             "codewithkyrian/transformers-libsloader": true,
             "php-http/discovery": true
-        }
+        },
+        "sort-packages": true
     }
 }
