remove path repositories since we have packages now

--- a/src/mcp-bundle/composer.json
+++ b/src/mcp-bundle/composer.json
@@ -32,8 +32,5 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "repositories": [
-        { "type": "path", "url": "../mcp-sdk" }
-    ]
+    "prefer-stable": true
 }
