--- a/examples/.env
+++ b/examples/.env
@@ -70,3 +70,7 @@ GEMINI_API_KEY=
 
 # For MariaDB store. Server defined in compose.yaml
 MARIADB_URI=pdo-mysql://root@127.0.0.1:3309/my_database
+
+# Meilisearch
+MEILISEARCH_HOST=http://127.0.0.1:7700
+MEILISEARCH_API_KEY=changeMe
