add more code owners definitions

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,4 @@
-src @chr-hertel @Nyholm
+demo @chr-hertel
+examples @chr-hertel @OskarStark
+fixtures @chr-hertel @OskarStark
+src @chr-hertel @Nyholm @OskarStark
