feat(store): qdrant store started

--- a/examples/.env
+++ b/examples/.env
@@ -81,3 +81,7 @@ MEILISEARCH_API_KEY=changeMe
 
 # For using LMStudio
 LMSTUDIO_HOST_URL=http://127.0.0.1:1234
+
+# Qdrant
+QDRANT_HOST='http://127.0.0.1:6333'
+QDRANT_SERVICE_API_KEY=changeMe
