--- a/examples/compose.yaml
+++ b/examples/compose.yaml
@@ -5,7 +5,7 @@ services:
       MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: 1
       MARIADB_DATABASE: my_database
     ports:
-      - "3309:3306"
+      - '3309:3306'
 
   postgres:
     image: pgvector/pgvector:0.8.0-pg17
@@ -14,11 +14,18 @@ services:
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: postgres
     ports:
-        - "5432:5432"
+        - '5432:5432'
 
   meilisearch:
       image: getmeili/meilisearch:v1.15
       environment:
-          MEILI_MASTER_KEY: "${MEILISEARCH_MASTER_KEY:-changeMe}"
+          MEILI_MASTER_KEY: '${MEILISEARCH_MASTER_KEY:-changeMe}'
       ports:
-          - "7700:7700"
+          - '7700:7700'
+
+  qdrant:
+      image: qdrant/qdrant
+      environment:
+          QDRANT__SERVICE__API_KEY: '${QDRAT_SERVICE_API_KEY:-changeMe}'
+      ports:
+          - '6333:6333'
