[Platform] Add lmstudio

--- a/examples/.env
+++ b/examples/.env
@@ -78,3 +78,6 @@ MARIADB_URI=pdo-mysql://root@127.0.0.1:3309/my_database
 # Meilisearch
 MEILISEARCH_HOST=http://127.0.0.1:7700
 MEILISEARCH_API_KEY=changeMe
+
+# For using LMStudio
+LMSTUDIO_HOST_URL=http://127.0.0.1:1234
