Add PHPStan rule forbidding native exceptions and switch remaining ones

--- a/src/mcp-bundle/composer.json
+++ b/src/mcp-bundle/composer.json
@@ -31,6 +31,11 @@
             "Symfony\\AI\\McpBundle\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Symfony\\AI\\PHPStan\\": "../../.phpstan"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
