--- a/examples/compose.yaml
+++ b/examples/compose.yaml
@@ -8,7 +8,7 @@ services:
       - "3309:3306"
 
   postgres:
-    image: ankane/pgvector
+    image: pgvector/pgvector:0.8.0-pg17
     environment:
         POSTGRES_DB: my_database
         POSTGRES_USER: postgres
