[Store] Add SurrealDB

--- a/examples/.env
+++ b/examples/.env
@@ -83,5 +83,10 @@ MEILISEARCH_API_KEY=changeMe
 LMSTUDIO_HOST_URL=http://127.0.0.1:1234
 
 # Qdrant
-QDRANT_HOST='http://127.0.0.1:6333'
+QDRANT_HOST=http://127.0.0.1:6333
 QDRANT_SERVICE_API_KEY=changeMe
+
+# SurrealDB
+SURREALDB_HOST=http://127.0.0.1:8000
+SURREALDB_USER=symfony
+SURREALDB_PASS=symfony
