[Store] Add Neo4j

--- a/examples/.env
+++ b/examples/.env
@@ -90,3 +90,9 @@ QDRANT_SERVICE_API_KEY=changeMe
 SURREALDB_HOST=http://127.0.0.1:8000
 SURREALDB_USER=symfony
 SURREALDB_PASS=symfony
+
+# Neo4J
+NEO4J_HOST=http://127.0.0.1:7474
+NEO4J_DATABASE=neo4j
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=symfonyai
