--- a/src/store/composer.json
+++ b/src/store/composer.json
@@ -6,7 +6,13 @@
         "ai",
         "mongodb",
         "pinecone",
-        "chromadb"
+        "chromadb",
+        "mariadb",
+        "postgres",
+        "meilisearch",
+        "surrealdb",
+        "qdrant",
+        "neo4j"
     ],
     "license": "MIT",
     "authors": [
