--- a/src/mcp-bundle/phpstan.dist.neon
+++ b/src/mcp-bundle/phpstan.dist.neon
@@ -8,5 +8,8 @@ parameters:
         - tests/
     ignoreErrors:
         -
+            identifier: missingType.iterableValue
+            path: tests/*
+        -
             message: "#^Method .*::test.*\\(\\) has no return type specified\\.$#"
             reportUnmatched: false # we don't have tests yet
