feat(platform): meilisearch message bag

--- a/examples/composer.json
+++ b/examples/composer.json
@@ -21,6 +21,7 @@
         "symfony/ai-platform": "@dev",
         "symfony/ai-store": "@dev",
         "symfony/cache": "^7.3|^8.0",
+        "symfony/clock": "^7.3|^8.0",
         "symfony/console": "^7.3|^8.0",
         "symfony/css-selector": "^7.3|^8.0",
         "symfony/dependency-injection": "^7.3|^8.0",
