[Store] Add Typesense

--- a/examples/.env
+++ b/examples/.env
@@ -96,3 +96,7 @@ NEO4J_HOST=http://127.0.0.1:7474
 NEO4J_DATABASE=neo4j
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=symfonyai
+
+# Typesense
+TYPESENSE_HOST=http://127.0.0.1:8108
+TYPESENSE_API_KEY=changeMe
