--- a/examples/compose.yaml
+++ b/examples/compose.yaml
@@ -45,3 +45,16 @@ services:
       ports:
           - '7474:7474'
           - '7687:7687'
+
+  typesense:
+      image: typesense/typesense:29.0
+      environment:
+          TYPESENSE_API_KEY: '${TYPESENSE_API_KEY:-changeMe}'
+          TYPESENSE_DATA_DIR: '/data'
+      volumes:
+          - typesense_data:/data
+      ports:
+          - '8108:8108'
+
+volumes:
+    typesense_data:
