--- a/examples/.env
+++ b/examples/.env
@@ -52,6 +52,10 @@ TAVILY_API_KEY=
 # For using Brave (tool)
 BRAVE_API_KEY=
 
+# For using Firecrawl (tool)
+FIRECRAWL_HOST=https://api.firecrawl.dev
+FIRECRAWL_API_KEY=
+
 # For using MongoDB Atlas (store)
 MONGODB_URI=
 
