feat(platform): ElevenLabs platform

--- a/examples/.env
+++ b/examples/.env
@@ -43,6 +43,10 @@ HUGGINGFACE_KEY=
 # For using OpenRouter
 OPENROUTER_KEY=
 
+# For using ElevenLabs
+ELEVEN_LABS_URL=https://api.elevenlabs.io/v1
+ELEVEN_LABS_API_KEY=
+
 # For using SerpApi (tool)
 SERP_API_KEY=
 
