--- a/examples/composer.json
+++ b/examples/composer.json
@@ -33,6 +33,7 @@
     "config": {
         "allow-plugins": {
             "codewithkyrian/platform-package-installer": true,
+            "codewithkyrian/transformers-libsloader": true,
             "php-http/discovery": true
         },
         "sort-packages": true
