--- a/examples/.env
+++ b/examples/.env
@@ -76,6 +76,10 @@ RUN_EXPENSIVE_EXAMPLES=false
 # For using Gemini
 GEMINI_API_KEY=
 
+# Vertex AI
+GOOGLE_CLOUD_LOCATION=global
+GOOGLE_CLOUD_PROJECT=GOOGLE_CLOUD_PROJECT
+
 # For using Albert API (French Sovereign AI)
 ALBERT_API_KEY=
 ALBERT_API_URL=
