[Store] Add Milvus

--- a/examples/.env
+++ b/examples/.env
@@ -83,31 +83,36 @@ ALBERT_API_URL=
 # For MariaDB store. Server defined in compose.yaml
 MARIADB_URI=pdo-mysql://root@127.0.0.1:3309/my_database
 
-# Meilisearch
+# Meilisearch (store)
 MEILISEARCH_HOST=http://127.0.0.1:7700
 MEILISEARCH_API_KEY=changeMe
 
 # For using LMStudio
 LMSTUDIO_HOST_URL=http://127.0.0.1:1234
 
-# Qdrant
+# Qdrant (store)
 QDRANT_HOST=http://127.0.0.1:6333
 QDRANT_SERVICE_API_KEY=changeMe
 
-# SurrealDB
+# SurrealDB (store)
 SURREALDB_HOST=http://127.0.0.1:8000
 SURREALDB_USER=symfony
 SURREALDB_PASS=symfony
 
-# Neo4J
+# Neo4J (store)
 NEO4J_HOST=http://127.0.0.1:7474
 NEO4J_DATABASE=neo4j
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=symfonyai
 
-# Typesense
+# Typesense (store)
 TYPESENSE_HOST=http://127.0.0.1:8108
 TYPESENSE_API_KEY=changeMe
+
+# Milvus (store)
+MILVUS_HOST=http://127.0.0.1:19530
+MILVUS_API_KEY=root:Milvus
+MILVUS_DATABASE=symfony
 
 # Cerebras
 CEREBRAS_API_KEY=
