feat(store): Weaviate support

--- a/examples/.env
+++ b/examples/.env
@@ -128,3 +128,7 @@ CHROMADB_PORT=8001
 CLICKHOUSE_HOST=http://symfony:symfony@127.0.0.1:8123
 CLICKHOUSE_DATABASE=symfony
 CLICKHOUSE_TABLE=symfony
+
+# Weaviate (store)
+WEAVIATE_HOST=http://127.0.0.1:8080
+WEAVIATE_API_KEY=symfony
