--- a/examples/composer.json
+++ b/examples/composer.json
@@ -15,6 +15,7 @@
         "symfony/ai-agent": "@dev",
         "symfony/ai-platform": "@dev",
         "symfony/ai-store": "@dev",
+        "symfony/cache": "^6.4|^7.0",
         "symfony/console": "^6.4|^7.0",
         "symfony/css-selector": "^6.4|^7.0",
         "symfony/dom-crawler": "^6.4|^7.0",
