--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
     "require-dev": {
         "php": ">=8.2",
         "php-cs-fixer/shim": "^3.75",
-        "symfony/filesystem": "^6.4 || ^7.0",
-        "symfony/finder": "^6.4 || ^7.0"
+        "symfony/filesystem": "^7.3|^8.0",
+        "symfony/finder": "^7.3|^8.0"
     },
+    "minimum-stability": "dev",
     "config": {
         "sort-packages": true
     }
