--- a/examples/composer.json
+++ b/examples/composer.json
@@ -19,17 +19,17 @@
         "symfony/ai-agent": "@dev",
         "symfony/ai-platform": "@dev",
         "symfony/ai-store": "@dev",
-        "symfony/cache": "^6.4 || ^7.0",
-        "symfony/console": "^6.4 || ^7.0",
-        "symfony/css-selector": "^6.4 || ^7.0",
-        "symfony/dependency-injection": "^6.4 || ^7.0",
-        "symfony/dom-crawler": "^6.4 || ^7.0",
-        "symfony/dotenv": "^6.4 || ^7.0",
-        "symfony/event-dispatcher": "^6.4 || ^7.0",
-        "symfony/filesystem": "^6.4 || ^7.0",
-        "symfony/finder": "^6.4 || ^7.0",
-        "symfony/process": "^6.4 || ^7.0",
-        "symfony/var-dumper": "^6.4 || ^7.0"
+        "symfony/cache": "^7.3|^8.0",
+        "symfony/console": "^7.3|^8.0",
+        "symfony/css-selector": "^7.3|^8.0",
+        "symfony/dependency-injection": "^7.3|^8.0",
+        "symfony/dom-crawler": "^7.3|^8.0",
+        "symfony/dotenv": "^7.3|^8.0",
+        "symfony/event-dispatcher": "^7.3|^8.0",
+        "symfony/filesystem": "^7.3|^8.0",
+        "symfony/finder": "^7.3|^8.0",
+        "symfony/process": "^7.3|^8.0",
+        "symfony/var-dumper": "^7.3|^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.1"
