--- a/src/mcp-bundle/composer.json
+++ b/src/mcp-bundle/composer.json
@@ -10,14 +10,14 @@
         }
     ],
     "require": {
-        "symfony/config": "^6.4 || ^7.0",
-        "symfony/console": "^6.4 || ^7.0",
-        "symfony/dependency-injection": "^6.4 || ^7.0",
-        "symfony/framework-bundle": "^6.4 || ^7.0",
-        "symfony/http-foundation": "^6.4 || ^7.0",
-        "symfony/http-kernel": "^6.4 || ^7.0",
+        "symfony/config": "^7.3|^8.0",
+        "symfony/console": "^7.3|^8.0",
+        "symfony/dependency-injection": "^7.3|^8.0",
+        "symfony/framework-bundle": "^7.3|^8.0",
+        "symfony/http-foundation": "^7.3|^8.0",
+        "symfony/http-kernel": "^7.3|^8.0",
         "symfony/mcp-sdk": "@dev",
-        "symfony/routing": "^6.4 || ^7.0"
+        "symfony/routing": "^7.3|^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.1",
