--- a/src/store/composer.json
+++ b/src/store/composer.json
@@ -36,9 +36,9 @@
         "ext-fileinfo": "*",
         "psr/log": "^3.0",
         "symfony/ai-platform": "@dev",
-        "symfony/clock": "^6.4 || ^7.1",
-        "symfony/http-client": "^6.4 || ^7.1",
-        "symfony/uid": "^6.4 || ^7.1"
+        "symfony/clock": "^7.3|^8.0",
+        "symfony/http-client": "^7.3|^8.0",
+        "symfony/uid": "^7.3|^8.0"
     },
     "require-dev": {
         "codewithkyrian/chromadb-php": "^0.2.1 || ^0.3 || ^0.4",
@@ -74,5 +74,6 @@
             "name": "symfony/ai",
             "url": "https://github.com/symfony/ai"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
