--- a/examples/composer.json
+++ b/examples/composer.json
@@ -21,6 +21,7 @@
         "symfony/cache": "^6.4 || ^7.0",
         "symfony/console": "^6.4 || ^7.0",
         "symfony/css-selector": "^6.4 || ^7.0",
+        "symfony/dependency-injection": "^6.4 || ^7.0",
         "symfony/dom-crawler": "^6.4 || ^7.0",
         "symfony/dotenv": "^6.4 || ^7.0",
         "symfony/event-dispatcher": "^6.4 || ^7.0",
