feat(store): cloudflare

--- a/examples/.env
+++ b/examples/.env
@@ -118,6 +118,10 @@ MILVUS_HOST=http://127.0.0.1:19530
 MILVUS_API_KEY=root:Milvus
 MILVUS_DATABASE=symfony
 
+# Cloudflare (store)
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_API_KEY=
+
 # Cerebras
 CEREBRAS_API_KEY=
 
