--- a/src/store/composer.json
+++ b/src/store/composer.json
@@ -7,6 +7,7 @@
         "azure",
         "chromadb",
         "clickhouse",
+        "cloudflare",
         "mariadb",
         "meilisearch",
         "milvus",
