[Examples] Add `ClickHouse` to `compose.yaml`

--- a/examples/compose.yaml
+++ b/examples/compose.yaml
@@ -10,6 +10,15 @@ services:
         ports:
             - '8001:8000'
 
+    clickhouse:
+        image: clickhouse/clickhouse-server
+        environment:
+            CLICKHOUSE_DB: 'symfony'
+            CLICKHOUSE_USER: 'symfony'
+            CLICKHOUSE_PASSWORD: 'symfony'
+        ports:
+            - '8123:8123'
+
     mariadb:
         image: mariadb:11.7
         environment:
