--- a/examples/composer.json
+++ b/examples/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "ext-pdo": "*",
         "async-aws/bedrock-runtime": "^1.1",
+        "codewithkyrian/chromadb-php": "^0.4.0",
         "codewithkyrian/transformers": "^0.6.1",
         "doctrine/dbal": "^3.3|^4.0",
         "google/auth": "^1.47",
