ref(examples): example added for Clickhouse

--- a/examples/.env
+++ b/examples/.env
@@ -123,3 +123,8 @@ CEREBRAS_API_KEY=
 
 CHROMADB_HOST=http://127.0.0.1
 CHROMADB_PORT=8001
+
+# For using Clickhouse (store)
+CLICKHOUSE_HOST=http://symfony:symfony@127.0.0.1:8123
+CLICKHOUSE_DATABASE=symfony
+CLICKHOUSE_TABLE=symfony
