[Examples] Improve mongodb

--- a/examples/.env
+++ b/examples/.env
@@ -61,7 +61,7 @@ FIRECRAWL_HOST=https://api.firecrawl.dev
 FIRECRAWL_API_KEY=
 
 # For using MongoDB Atlas (store)
-MONGODB_URI=
+MONGODB_URI=mongodb://symfony:symfony@127.0.0.1:27017
 
 # For using Pinecone (store)
 PINECONE_API_KEY=
