[Agent][Toolbox] Add Mapbox.com geocoding tool for address-to-coordinates conversion

--- a/examples/.env
+++ b/examples/.env
@@ -60,6 +60,9 @@ BRAVE_API_KEY=
 FIRECRAWL_HOST=https://api.firecrawl.dev
 FIRECRAWL_API_KEY=
 
+# For using Mapbox (tool)
+MAPBOX_ACCESS_TOKEN=
+
 # For using MongoDB Atlas (store)
 MONGODB_URI=mongodb://symfony:symfony@127.0.0.1:27017
 
