[Platform] Add Docker Model Runner

--- a/examples/.env
+++ b/examples/.env
@@ -20,6 +20,9 @@ OLLAMA_HOST_URL=http://localhost:11434
 OLLAMA_LLM=llama3.2
 OLLAMA_EMBEDDINGS=nomic-embed-text
 
+# For using Docker Model Runner
+DOCKER_MODEL_RUNNER_HOST_URL=
+
 # For using GPT on Azure
 AZURE_OPENAI_BASEURL=
 AZURE_OPENAI_KEY=
