feat(store): Integrate supabase into the store package
- Adds support for supabase

feat(store): Integrate supabase into the store package

- Adds bundle integration
- Adds an entry into the stores factory for supabase

docs(store): Integrate supabase into the store package

- Adds documentation for the new store integration

patch example, default envs and docs after test

--- a/examples/.env
+++ b/examples/.env
@@ -156,3 +156,11 @@ SCALEWAY_SECRET_KEY=
 
 # For using DeepSeek
 DEEPSEEK_API_KEY=
+
+# Supabase (store)
+SUPABASE_URL=
+SUPABASE_API_KEY=
+SUPABASE_TABLE=documents
+SUPABASE_VECTOR_FIELD=embedding
+SUPABASE_VECTOR_DIMENSION=768 # when using Ollama with nomic-embed-text
+SUPABASE_MATCH_FUNCTION=match_documents
