--- a/src/store/composer.json
+++ b/src/store/composer.json
@@ -17,6 +17,7 @@
         "pinecone",
         "postgres",
         "qdrant",
+        "supabase",
         "surrealdb",
         "typesense",
         "weaviate"
