Add Perplexity API key entry to examples/.env

--- a/examples/.env
+++ b/examples/.env
@@ -87,6 +87,9 @@ GOOGLE_CLOUD_PROJECT=GOOGLE_CLOUD_PROJECT
 ALBERT_API_KEY=
 ALBERT_API_URL=
 
+# Perplexity
+PERPLEXITY_API_KEY=
+
 # For MariaDB store. Server defined in compose.yaml
 MARIADB_URI=pdo-mysql://root@127.0.0.1:3309/my_database
 
