Fix running PHPStan on example

--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -60,12 +60,12 @@ jobs:
             - name: Build root packages
               run: php .github/build-packages.php
 
+            - name: Run PHPStan on examples
+              run: |
+                  cd examples/ && $COMPOSER_UP && ../link && $PHPSTAN
+
             - name: Run PHPStan on packages
               run: |
                   source .github/workflows/.utils.sh
 
                   echo "$PACKAGES" | xargs -n1 | parallel -j +3 "_run_task {} '(cd src/{} && $COMPOSER_UP && $PHPSTAN)'"
-
-            - name: Run PHPStan on examples
-              run: |
-                  cd examples/ && $COMPOSER_UP && $PHPSTAN
