[Platform][AI/ML API] Add bridge

--- a/examples/.env
+++ b/examples/.env
@@ -80,6 +80,9 @@ RUN_EXPENSIVE_EXAMPLES=false
 # For using Gemini
 GEMINI_API_KEY=
 
+# For using AI/ML API
+AIMLAPI_API_KEY=
+
 # Vertex AI
 GOOGLE_CLOUD_LOCATION=global
 GOOGLE_CLOUD_PROJECT=GOOGLE_CLOUD_PROJECT
