Consistency about Ollama model config via env, and wrap up docs.

--- a/examples/.env
+++ b/examples/.env
@@ -16,8 +16,9 @@ VOYAGE_API_KEY=
 REPLICATE_API_KEY=
 
 # For using Ollama
-OLLAMA_HOST_URL=
-OLLAMA_MODEL=
+OLLAMA_HOST_URL=http://localhost:11434
+OLLAMA_LLM=llama3.2
+OLLAMA_EMBEDDINGS=nomic-embed-text
 
 # For using GPT on Azure
 AZURE_OPENAI_BASEURL=
