Define default url for example

--- a/examples/.env
+++ b/examples/.env
@@ -21,7 +21,7 @@ OLLAMA_LLM=llama3.2
 OLLAMA_EMBEDDINGS=nomic-embed-text
 
 # For using Docker Model Runner
-DOCKER_MODEL_RUNNER_HOST_URL=
+DOCKER_MODEL_RUNNER_HOST_URL=http://127.0.0.1:12434
 
 # For using GPT on Azure
 AZURE_OPENAI_BASEURL=
