[Demo] Fix tests

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -18,7 +18,7 @@ env:
     REQUIRED_PHP_EXTENSIONS: 'mongodb'
 
 jobs:
-    php:
+    examples:
         runs-on: ubuntu-latest
         strategy:
             fail-fast: false
@@ -82,3 +82,35 @@ jobs:
 
             - name: Run commands examples
               run: php examples/commands/stores.php
+
+    demo:
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v5
+
+            - name: Setup PHP
+              uses: shivammathur/setup-php@v2
+              with:
+                  php-version: '8.4'
+                  tools: flex
+                  extensions: "${{ env.REQUIRED_PHP_EXTENSIONS }}"
+
+            - name: Get composer cache directory
+              id: composer-cache
+              run: |
+                  echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+            - name: Cache demo dependencies
+              uses: actions/cache@v4
+              with:
+                  path: ${{ steps.composer-cache.outputs.dir }}
+                  key: ${{ runner.os }}-composer-demo-8.4-${{ hashFiles('demo/composer.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-composer-demo-8.4
+
+            - name: Install demo dependencies
+              run: cd demo && composer install --no-progress --no-interaction --ansi
+
+            - name: Run demo tests
+              run: cd demo && vendor/bin/phpunit
