--- a/src/mcp-bundle/composer.json
+++ b/src/mcp-bundle/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-strict-rules": "^2.0",
         "phpunit/phpunit": "^11.5"
     },
     "minimum-stability": "dev",
