--- a/demo/composer.json
+++ b/demo/composer.json
@@ -40,6 +40,7 @@
     "require-dev": {
         "php-cs-fixer/shim": "^3.75",
         "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-strict-rules": "^2.0",
         "phpunit/phpunit": "^11.5",
         "symfony/browser-kit": "~7.3.0",
         "symfony/debug-bundle": "~7.3.0",
