--- a/examples/composer.json
+++ b/examples/composer.json
@@ -32,7 +32,8 @@
         "symfony/var-dumper": "^7.3|^8.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^2.1"
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-strict-rules": "^2.0"
     },
     "minimum-stability": "dev",
     "autoload": {
