--- a/src/mcp-sdk/composer.json
+++ b/src/mcp-sdk/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-strict-rules": "^2.0",
         "phpunit/phpunit": "^11.5",
         "psr/cache": "^3.0",
         "symfony/console": "^7.3|^8.0"
