Add `SCALEWAY_SECRET_KEY` environment variable

--- a/examples/.env
+++ b/examples/.env
@@ -150,3 +150,6 @@ CLICKHOUSE_TABLE=symfony
 # Weaviate (store)
 WEAVIATE_HOST=http://127.0.0.1:8080
 WEAVIATE_API_KEY=symfony
+
+# For using Scaleway
+SCALEWAY_SECRET_KEY=
