--- a/src/chat/composer.json
+++ b/src/chat/composer.json
@@ -27,6 +27,8 @@
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-strict-rules": "^2.0",
         "phpunit/phpunit": "^11.5.13",
+        "symfony/dependency-injection": "^7.3|^8.0",
+        "symfony/console": "^7.3|^8.0",
         "symfony/http-foundation": "^7.3|^8.0",
         "psr/cache": "^3.0"
     },
