Move RST documentation to `/docs`

--- a/.github/workflows/doctor-rst.yaml
+++ b/.github/workflows/doctor-rst.yaml
@@ -4,11 +4,11 @@ on:
     push:
         paths:
             - '**.rst'
-            - 'src/*/doc/**'
+            - 'docs/**'
     pull_request:
         paths:
             - '**.rst'
-            - 'src/*/doc/**'
+            - 'docs/**'
 
 jobs:
     doctor-rst:
