Fix demo by PHPStan findings + pipeline

--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -64,6 +64,10 @@ jobs:
               run: |
                   cd examples/ && $COMPOSER_UP && ../link && $PHPSTAN
 
+            - name: Run PHPStan on demo
+              run: |
+                  cd demo/ && $COMPOSER_UP && ../link && $PHPSTAN
+
             - name: Run PHPStan on packages
               run: |
                   source .github/workflows/.utils.sh
