Add thanks metadata to remaining components
https://github.com/symfony/ai

--- a/src/mcp-bundle/composer.json
+++ b/src/mcp-bundle/composer.json
@@ -43,5 +43,11 @@
         "allow-plugins": {
             "php-http/discovery": true
         }
+    },
+    "extra": {
+        "thanks": {
+            "name": "symfony/ai",
+            "url": "https://github.com/symfony/ai"
+        }
     }
 }
