[Chat] Add Pogocache as message store

--- a/examples/.env
+++ b/examples/.env
@@ -164,3 +164,7 @@ SUPABASE_TABLE=documents
 SUPABASE_VECTOR_FIELD=embedding
 SUPABASE_VECTOR_DIMENSION=768 # when using Ollama with nomic-embed-text
 SUPABASE_MATCH_FUNCTION=match_documents
+
+# Pogocache (message store)
+POGOCACHE_HOST=http://127.0.0.1:9401
+POGOCACHE_PASSWORD=symfony
