feat(chat): redis added

--- a/examples/.env
+++ b/examples/.env
@@ -169,5 +169,5 @@ SUPABASE_MATCH_FUNCTION=match_documents
 POGOCACHE_HOST=http://127.0.0.1:9401
 POGOCACHE_PASSWORD=symfony
 
-# Redis (store)
+# Redis (both store and message store)
 REDIS_HOST=localhost
