--- a/examples/composer.json
+++ b/examples/composer.json
@@ -33,6 +33,7 @@
         "symfony/finder": "^7.3|^8.0",
         "symfony/http-foundation": "^7.3|^8.0",
         "symfony/process": "^7.3|^8.0",
+        "symfony/serializer": "^7.3|^8.0",
         "symfony/var-dumper": "^7.3|^8.0"
     },
     "require-dev": {
