feat(platform): Cartesia support

--- a/examples/.env
+++ b/examples/.env
@@ -52,6 +52,10 @@ OPENROUTER_KEY=
 ELEVEN_LABS_URL=https://api.elevenlabs.io/v1
 ELEVEN_LABS_API_KEY=
 
+# For using Cartesia
+CARTESIA_API_KEY=
+CARTESIA_API_VERSION=2025-04-16
+
 # For using SerpApi (tool)
 SERP_API_KEY=
 
