--- a/examples/.env
+++ b/examples/.env
@@ -168,3 +168,6 @@ SUPABASE_MATCH_FUNCTION=match_documents
 # Pogocache (message store)
 POGOCACHE_HOST=http://127.0.0.1:9401
 POGOCACHE_PASSWORD=symfony
+
+# Redis (store)
+REDIS_HOST=localhost
