--- a/examples/composer.json
+++ b/examples/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=8.2",
         "ext-pdo": "*",
+        "ext-redis": "*",
         "async-aws/bedrock-runtime": "^1.1",
         "codewithkyrian/chromadb-php": "^0.4.0",
         "codewithkyrian/transformers": "^0.6.2",
