[Chat] Introduce `MongoDb` as message store

--- a/examples/composer.json
+++ b/examples/composer.json
@@ -40,6 +40,9 @@
         "phpstan/phpstan": "^2.1",
         "phpstan/phpstan-strict-rules": "^2.0"
     },
+    "conflict": {
+        "mongodb/mongodb": "<1.21"
+    },
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
