[Store] Manticore support

--- a/examples/.env
+++ b/examples/.env
@@ -171,3 +171,6 @@ POGOCACHE_PASSWORD=symfony
 
 # Redis (both store and message store)
 REDIS_HOST=localhost
+
+# Manticore (store)
+MANTICORE_HOST=http://127.0.0.1:9308
