--- a/examples/compose.yaml
+++ b/examples/compose.yaml
@@ -19,6 +19,20 @@ services:
         ports:
             - '8123:8123'
 
+    manticore:
+        image: manticoresearch/manticore
+        ulimits:
+            nproc: 65535
+            nofile:
+                soft: 65535
+                hard: 65535
+            memlock:
+                soft: -1
+                hard: -1
+        ports:
+            - '9306:9306'
+            - '9308:9308'
+
     mariadb:
         image: mariadb:11.7
         environment:
