--- a/examples/.env
+++ b/examples/.env
@@ -112,6 +112,9 @@ MEILISEARCH_API_KEY=changeMe
 # For using LMStudio
 LMSTUDIO_HOST_URL=http://127.0.0.1:1234
 
+# For using LiteLLM
+LITELLM_HOST_URL=http://127.0.0.1:4000
+
 # Qdrant (store)
 QDRANT_HOST=http://127.0.0.1:6333
 QDRANT_SERVICE_API_KEY=changeMe
